--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,18 +1,19 @@
 // Fonts
-$sansSerif  : 'Open Sans';
+$bodyFont  : 'Open Sans';
+$captionFont : 'Open Sans' 600 italic;
 
 // Font Sizing
-$baseFontSize      : 16px;
+$bodyFontSize      : 16px;
 $baseLineHeight    : 1.5;
 $headingLineHeight : 1.2;
 
 // Colors
-$black : rgba(51,51,51,1);
+$black : rgb(1, 1, 1);
 $red   : #d52b1e;
 $blue  : #00a1de;
 
 // Spacing
-$pad : 1em;
+$pad : 1rem;
 
 // Breakpoints
 $smallBreakpoint : 600px;
