--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,6 +162,10 @@ header .sidenav.open {
 }
 header ul {
   margin: 6rem 0 0;
+  font-size: 1.8rem;
+}
+header ul li {
+  padding: 2rem;
 }
 header ul li a {
   margin: 0.5rem 0;
