--- a/styles/layouts/_main-layout.scss
+++ b/styles/layouts/_main-layout.scss
@@ -56,6 +56,10 @@ header {
     }
     ul {
       margin: 6rem 0 0;
+      font-size: 1.8rem;
+      li {
+        padding: 2rem;
+      }
       li a {
         margin: 0.5rem 0;
         padding: 1rem 1rem;
