--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 // Fonts
 $bodyFont  : 'Open Sans';
 $captionFont : 'Open Sans' 600 italic;
+$headerFont: 'Yeseva One', cursive;
 
 // Font Sizing
 $HeroFontSize      : 90px;
