--- a/styles/layouts/_main-layout.scss
+++ b/styles/layouts/_main-layout.scss
@@ -82,17 +82,54 @@ header {
 }
 
 .hero {
+  .hero-wrapper {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    max-height: 700px;
+    @include for-tablet-landscape-up {
+      max-height: 800px;
+    }
+  }
   .desktop-hero {
-    display: none;
     @include for-tablet-portrait-up {
       display: block;
     }
-    background-image: url(/images/music-hall-hero-background.jpg);
-    max-height: 730px;
-    display: flex;
+    background: url(/images/music-hall-hero-background.jpg) no-repeat center center;
+    background-size: cover;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     img {
-      max-width: 500px;
+      width: 250px;
+      height: auto;
+      @include for-tablet-landscape-up {
+        width: 400px;
+        height: auto;
+      }
     }
+    h1 {
+      margin: 0;
+      line-height: 6.5rem;
+      max-width: 300px;
+      color: white;
+      font-family: $headerFont;
+      font-size: 60px;
+      padding-right: 3rem;
+      padding-left: 3rem;
+      @include for-tablet-landscape-up {
+        line-height: 9rem;
+        font-size: 80px;
+        max-width: 400px;
+        padding-right: 3rem;
+        padding-left: 3rem;
+      }
+    }
+    @include for-tablet-landscape-up {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+    }
+    display: none;
   }
   .mobile-hero {
     background-image: url(/images/mobile-hero-800px.jpg);
