Home Page Style Complete

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -15,6 +15,10 @@ $white: #f0f0f0;
 
 $light-yellow: #F5E0B1;
 $dark-yellow: #D9A53F;
+$light-purple: #AF8AE3;
+$dark-purple: #501E98;
+$dark-green: #356D5B;
+$light-green: #9AD7C3;
 
 // Spacing
 $pad : 2rem;
