--- a/styles/styles.css
+++ b/styles/styles.css
@@ -387,7 +387,7 @@ header #desktop-nav li {
   margin: 0.5rem;
 }
 .Model-Hero .modelViewer button.arButton {
-  color: #fff;
+  color: #f0f0f0;
   border: none;
   font-size: 1rem;
   position: absolute;
