--- a/styles/layouts/_ar-layout.scss
+++ b/styles/layouts/_ar-layout.scss
@@ -13,7 +13,7 @@
       justify-content: space-between;
       margin: 0.5rem;
       button.arButton {
-        color: #fff;
+        color: $white;
         border: none;
         font-size: 1rem;
         position: absolute;
