--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ time, mark, audio, video {
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, header, hgroup, menu, nav, section, iframe {
   display: block;
 }
 
@@ -404,4 +404,34 @@ header #desktop-nav li {
 .Model-Hero .modelViewer div.arButton p {
   font-family: "Open Sans";
   margin: 0.1rem 0.2rem 0.2rem 0.2rem;
+}
+
+.content-wrapper .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1.6rem 0 1.6rem;
+}
+.content-wrapper .content iframe {
+  padding: 3.2rem 1.6rem 0 1.6rem;
+}
+@media (min-width: 600px) {
+  .content-wrapper .content iframe {
+    height: 500px;
+  }
+}
+@media (min-width: 1200px) {
+  .content-wrapper .content iframe {
+    height: 600px;
+  }
+}
+.content-wrapper .content img {
+  padding-top: 1.6rem;
+  max-width: 930px;
+}
+.content-wrapper .content p {
+  padding: 1.6rem 1.6rem 0 1.6rem;
+  font-family: "Open Sans";
+  font-size: 2rem;
+  line-height: 2.8rem;
 }/*# sourceMappingURL=styles.css.map */
