--- a/styles/layouts/_page-layout.scss
+++ b/styles/layouts/_page-layout.scss
@@ -1,3 +1,42 @@
+.explore-thumbnails {
+  max-width: 1170px;
+  margin: auto;
+  
+  h2 {
+    font-family: $bodyFont;
+    font-weight: 300;
+    font-size: 2.8rem;
+    padding: 1.6rem;
+  }
+  .scrollable{
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 4px, 4px;
+    padding: 4px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    figure{
+      margin: 1rem;
+      position: relative;
+      text-align: center;
+      //color: white;
+      border-radius: 10px;
+      font-family: $bodyFont;
+      font-size: 1.6rem;
+      img {
+        min-width: 170px;
+        border-radius: 10px;
+      }
+      figcaption {
+        position: absolute;
+        bottom: 1rem;
+        left: 1rem;
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
 
 .content-wrapper {
 
