--- a/styles/layouts/_ar-layout.scss
+++ b/styles/layouts/_ar-layout.scss
@@ -1,5 +1,5 @@
 .Model-Hero {
-    
+    font-family: $bodyFont;
     model-viewer {
         max-width: 500px;
         margin:auto;
@@ -12,6 +12,7 @@
       align-items: center;
       justify-content: space-between;
       margin: 0.5rem;
+      text-align: center;
       button.arButton {
         color: $white;
         border: none;
@@ -20,7 +21,7 @@
         bottom: 1rem;
         border-radius: 4px;
         background-color: $dark-yellow;
-       
+      
       }
       div.arButton {
         padding: 0.5rem 1rem;
@@ -33,5 +34,7 @@
         }
       }
     }
-
+    h1 {
+      padding-left: 1.6rem;
+    }
 }
