--- a/styles/layouts/_page-layout.scss
+++ b/styles/layouts/_page-layout.scss
@@ -1,7 +1,7 @@
 .explore-thumbnails {
   max-width: 1170px;
   margin: auto;
-  
+  padding-top: 6rem;
   h2 {
     font-family: $bodyFont;
     font-weight: 300;
@@ -43,9 +43,13 @@
   .content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 0 1.6rem 0 1.6rem;
-    
+    padding-top: 6rem;
+    h2 {
+      font-family: $bodyFont;
+    font-weight: 300;
+    font-size: 2.8rem;
+    padding: 1.6rem;
+    }
       p {
         padding: 1.6rem 1.6rem 0 1.6rem;
         font-family: $bodyFont;
