--- a/styles/layouts/_home-layout.scss
+++ b/styles/layouts/_home-layout.scss
@@ -1,5 +1,3 @@
-
-
 .hero {
   .hero-wrapper {
     display: flex;
@@ -101,14 +99,19 @@
         display: none;
         @include for-tablet-landscape-up {
           display: block;
-
           padding-bottom: 2.4rem;
           font-size: 4rem;
           font-weight: 400;
         }
       }
+      .mobile-h2-wrapper {
+        display: flex;
+        
+      }
       .mobile-h2 {
+        text-align: left;
         display: block;
+        padding-left: 1.6rem;
         padding-top: 4.8rem;
         padding-bottom: 2.4rem;
         font-size: 4rem;
@@ -166,4 +169,3 @@
     }
   }
 }
-
