--- a/styles/layouts/_home-layout.scss
+++ b/styles/layouts/_home-layout.scss
@@ -81,22 +81,35 @@
 .home-page {
   font-family: $bodyFont;
   color: $black;
+  margin-bottom: 16rem;
   .home-tile {
+    max-width: 650px;
+      height: auto;
+      margin: auto;
+      @include for-tablet-landscape-up {
+        max-width: 1200px;
+        height: auto;
+      }
     .tile-wrapper {
+      box-shadow: 1px 1px 10px rgba(27, 27, 27, 0.2);
+      padding: 1.6rem 0rem 1.6rem 0rem;
       display: flex;
       flex-wrap: wrap;
       flex-direction: column;
-      @include for-desktop-up {
-        margin-top: 13rem;
-        margin-bottom: 5rem;
-      }
+      justify-content: center;
+      align-items: center; 
+      margin: 4.8rem 2rem 0rem 2rem;
       @include for-tablet-landscape-up {
+        padding: 2.4rem 0rem 2.4rem 0rem;
+        max-width: 930px;
+        height: auto;
+        margin: auto;
+        box-shadow: 1px 1px 16px rgba(27, 27, 27, 0.2);
         margin-top: 8rem;
         flex-direction: row;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
       }
-      align-items: center;
       .desktop-h2 {
         display: none;
         @include for-tablet-landscape-up {
@@ -114,7 +127,8 @@
         text-align: left;
         display: block;
         padding-left: 1.6rem;
-        padding-top: 4.8rem;
+        padding-right: 1.6rem;
+        padding-top: 3.6rem;
         padding-bottom: 2.4rem;
         font-size: 4rem;
         font-weight: 400;
@@ -142,15 +156,13 @@
         }
       }
       .paragraph {
-        @include for-desktop-up {
-          min-width: 574px;
-        }
-        @include for-tablet-landscape-up {
-          max-width: 300px;
-        }
         max-width: 574px;
         height: auto;
-        padding: 2.8rem 1.6rem 1.6rem 1.6rem;
+        padding: 1.6rem;
+        @include for-tablet-landscape-up {
+          max-width: 300px;
+          padding: 0.8rem;
+        }
         p {
           font-size: 2rem;
           line-height: 2.8rem;
