--- a/styles/styles.css
+++ b/styles/styles.css
@@ -276,25 +276,40 @@ header #desktop-nav li {
 .home-page {
   font-family: "Open Sans";
   color: #212121;
+  margin-bottom: 16rem;
+}
+.home-page .home-tile {
+  max-width: 650px;
+  height: auto;
+  margin: auto;
+}
+@media (min-width: 900px) {
+  .home-page .home-tile {
+    max-width: 1200px;
+    height: auto;
+  }
 }
 .home-page .home-tile .tile-wrapper {
+  box-shadow: 1px 1px 10px rgba(27, 27, 27, 0.2);
+  padding: 1.6rem 0rem 1.6rem 0rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-}
-@media (min-width: 1200px) {
-  .home-page .home-tile .tile-wrapper {
-    margin-top: 13rem;
-    margin-bottom: 5rem;
-  }
+  margin: 4.8rem 2rem 0rem 2rem;
 }
 @media (min-width: 900px) {
   .home-page .home-tile .tile-wrapper {
+    padding: 2.4rem 0rem 2.4rem 0rem;
+    max-width: 930px;
+    height: auto;
+    margin: auto;
+    box-shadow: 1px 1px 16px rgba(27, 27, 27, 0.2);
     margin-top: 8rem;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
   }
 }
 .home-page .home-tile .tile-wrapper .desktop-h2 {
@@ -315,7 +330,8 @@ header #desktop-nav li {
   text-align: left;
   display: block;
   padding-left: 1.6rem;
-  padding-top: 4.8rem;
+  padding-right: 1.6rem;
+  padding-top: 3.6rem;
   padding-bottom: 2.4rem;
   font-size: 4rem;
   font-weight: 400;
@@ -349,16 +365,12 @@ header #desktop-nav li {
 .home-page .home-tile .tile-wrapper .paragraph {
   max-width: 574px;
   height: auto;
-  padding: 2.8rem 1.6rem 1.6rem 1.6rem;
-}
-@media (min-width: 1200px) {
-  .home-page .home-tile .tile-wrapper .paragraph {
-    min-width: 574px;
-  }
+  padding: 1.6rem;
 }
 @media (min-width: 900px) {
   .home-page .home-tile .tile-wrapper .paragraph {
     max-width: 300px;
+    padding: 0.8rem;
   }
 }
 .home-page .home-tile .tile-wrapper .paragraph p {
