--- a/styles/styles.css
+++ b/styles/styles.css
@@ -391,6 +391,7 @@ header #desktop-nav li {
 }
 
 .Model-Hero {
+  margin-top: 1.6rem;
   font-family: "Open Sans";
 }
 .Model-Hero model-viewer {
@@ -443,7 +444,13 @@ header #desktop-nav li {
 
 .hero .image-hero {
   background: url("/images/la-poussiere-header-imge.jpg") no-repeat center center;
-  height: 300px;
+  background-size: 120% auto;
+  height: 200px;
+}
+@media (min-width: 600px) {
+  .hero .image-hero {
+    height: 300px;
+  }
 }
 .hero .hall-title {
   font-size: 4rem;
@@ -460,7 +467,7 @@ header #desktop-nav li {
 .explore-thumbnails {
   max-width: 1170px;
   margin: auto;
-  padding-top: 6rem;
+  padding-top: 3.6rem;
 }
 .explore-thumbnails h2 {
   font-family: "Open Sans";
@@ -476,38 +483,56 @@ header #desktop-nav li {
   overflow-x: auto;
   overflow-y: hidden;
 }
+@media (min-width: 600px) {
+  .explore-thumbnails .scrollable {
+    justify-content: space-around;
+  }
+}
 .explore-thumbnails .scrollable figure {
   margin: 1rem;
   position: relative;
   text-align: center;
   border-radius: 10px;
   font-family: "Open Sans";
-  font-size: 1.6rem;
+  font-size: 18px;
+  color: #f0f0f0;
+  font-weight: 1000;
+}
+.explore-thumbnails .scrollable figure .img-scrim {
+  height: 250px;
+  border-radius: 10px;
+  background: linear-gradient(rgba(27, 27, 27, 0.8), rgb(27, 27, 27));
 }
 .explore-thumbnails .scrollable figure img {
-  min-width: 170px;
+  opacity: 0.5;
+  width: auto;
+  height: 250px;
   border-radius: 10px;
+  box-shadow: 1px 1px 8px rgba(27, 27, 27, 0.3);
 }
 .explore-thumbnails .scrollable figure figcaption {
   position: absolute;
-  bottom: 1rem;
-  left: 1rem;
-  text-decoration: underline;
+  bottom: 1.8rem;
+  left: 1.8rem;
 }
 
+.content-wrapper {
+  margin-bottom: 3.6rem;
+}
 .content-wrapper .content {
   display: flex;
   flex-direction: column;
-  padding-top: 6rem;
+  padding-top: 3.6rem;
 }
 .content-wrapper .content h2 {
   font-family: "Open Sans";
   font-weight: 300;
   font-size: 2.8rem;
   padding: 1.6rem;
+  line-height: 1.2;
 }
 .content-wrapper .content p {
-  padding: 1.6rem 1.6rem 0 1.6rem;
+  padding: 1.6rem 1.6rem 0rem 1.6rem;
   font-family: "Open Sans";
   font-size: 2rem;
   line-height: 2.8rem;
