--- a/styles/styles.css
+++ b/styles/styles.css
@@ -442,6 +442,16 @@ header #desktop-nav li {
   padding-left: 1.6rem;
 }
 
+.hero .image-hero-hamilton {
+  background: url("/images/hamiltons-header-image.jpg") no-repeat center center;
+  background-size: 120% auto;
+  height: 200px;
+}
+@media (min-width: 600px) {
+  .hero .image-hero-hamilton {
+    height: 300px;
+  }
+}
 .hero .image-hero {
   background: url("/images/la-poussiere-header-imge.jpg") no-repeat center center;
   background-size: 120% auto;
@@ -536,4 +546,56 @@ header #desktop-nav li {
   font-family: "Open Sans";
   font-size: 2rem;
   line-height: 2.8rem;
+}
+
+#VR-tour-header {
+  color: #f0f0f0;
+  background-color: #212121;
+  width: 100%;
+  height: 70px;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+#VR-tour-header #link {
+  font-size: 3rem;
+  padding-left: 2rem;
+  position: absolute;
+}
+#VR-tour-header #link a img {
+  max-width: 24px;
+  height: auto;
+}
+#VR-tour-header #title {
+  width: 100%;
+  font-size: 2.4rem;
+  text-align: center;
+}
+#VR-tour-header #title h2 {
+  display: inline;
+  font-family: "Yeseva One", cursive;
+  font-weight: 100;
+}
+
+#vid-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#vid-wrapper .contentContainer {
+  margin-top: 4rem;
+  width: 100%;
+  max-width: 680px;
+  margin-bottom: 5rem;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+  font-family: "Open Sans";
+}
+#vid-wrapper .contentContainer iframe {
+  margin-left: auto;
+  margin-right: auto;
+}
+#vid-wrapper .contentContainer video {
+  width: 100%;
+  height: auto;
 }/*# sourceMappingURL=styles.css.map */
