--- a/styles/layouts/_explore-designs.scss
+++ b/styles/layouts/_explore-designs.scss
@@ -1,3 +1,5 @@
+//header
+
 #VR-tour-header {
   color: $white;
   background-color: $black;
@@ -28,26 +30,40 @@
   }
 }
 
+//video pages
+
 #vid-wrapper {
+  height: 100vh;
+  background-color: $black;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  //justify-content: center;
   align-items: center;
+  padding-top: 2rem;
+  max-width: 1700px;
   .contentContainer {
-    margin-top: 4rem;
+    position: relative;
     width: 100%;
-    max-width: 680px;
-    margin-bottom: 5rem;
-    font-size: 1.8rem;
-    line-height: 2.4rem;
-    font-family: $bodyFont;
-    iframe {
-      margin-left: auto;
-      margin-right: auto;
-    }
-    video {
+    height: 0;
+    padding-bottom: 56.25%;
+    .video {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: auto;
+      height: 100%;
+      padding: 2rem;
     }
   }
+  .textContainer{
+    text-align: left;
+    line-height: 1.4;
+    padding: 2rem;
+    font-family: $bodyFont;
+    font-size: 1.8rem;
+    color: $white;
+    font-style: italic;
+  }
 }
+
+// gallery pages
