--- a/styles/layouts/_explore-designs.scss
+++ b/styles/layouts/_explore-designs.scss
@@ -52,7 +52,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      padding: 2rem;
+      padding: 0 2rem 0 2rem;
     }
   }
   .textContainer{
